parser/tests/snapshots/variable_assignment__tests__missing_bang.snap
---
source: parser/tests/variable_assignment.rs
expression: "(tokens, parsed)"
---
(
    [
        Litteral(
            "var",
        ),
        Space,
        Litteral(
            "const",
        ),
        Space,
        Litteral(
            "name",
        ),
        Space,
        Equal,
        Space,
        Numeric(
            [
                5,
            ],
        ),
        EOF,
    ],
    Err(
        UnexpectedToken {
            expected: "one of `!`,`?`",
            got: "EOF",
        },
    ),
)
