parser/tests/snapshots/variable_assignment__tests__missing_internal_mutability.snap
---
source: parser/tests/variable_assignment.rs
expression: "(tokens, parsed)"
---
(
    [
        Litteral(
            "var",
        ),
        Space,
        Litteral(
            "cool",
        ),
        Underscore,
        Litteral(
            "var",
        ),
        Underscore,
        Litteral(
            "name",
        ),
        Space,
        Equal,
        Space,
        Numeric(
            [
                1,
                5,
            ],
        ),
        Bang,
        EOF,
    ],
    Err(
        UnexpectedToken {
            expected: "one of `const`,`var`",
            got: "Litteral",
        },
    ),
)
