parser/tests/snapshots/variable_assignment__tests__var_var_int_declaration.snap
---
source: parser/tests/variable_assignment.rs
expression: "(tokens, parsed)"
---
(
    [
        Litteral(
            "var",
        ),
        Space,
        Litteral(
            "var",
        ),
        Space,
        Litteral(
            "cool",
        ),
        Underscore,
        Litteral(
            "var",
        ),
        Underscore,
        Litteral(
            "name",
        ),
        Space,
        Equal,
        Space,
        Numeric(
            [
                5,
            ],
        ),
        Bang,
        EOF,
    ],
    Ok(
        AssignmentExpression {
            outer_mutability: true,
            inner_mutability: true,
            global: false,
            global_mutability: false,
            name: "cool_var_name",
            _type: Int,
            value: Litteral(
                Int(
                    5,
                ),
            ),
        },
    ),
)
