parser/tests/snapshots/variable_assignment__tests__var_var_string_no_quote_declaration.snap
---
source: parser/tests/variable_assignment.rs
expression: "(tokens, parsed)"
---
(
    [
        Litteral(
            "var",
        ),
        Space,
        Litteral(
            "var",
        ),
        Space,
        Litteral(
            "cool",
        ),
        Underscore,
        Litteral(
            "var",
        ),
        Underscore,
        Litteral(
            "name",
        ),
        Space,
        Equal,
        Space,
        Litteral(
            "hi",
        ),
        Bang,
        EOF,
    ],
    Ok(
        AssignmentExpression {
            outer_mutability: true,
            inner_mutability: true,
            global: false,
            global_mutability: false,
            name: "cool_var_name",
            _type: String,
            value: Litteral(
                String(
                    "hi",
                ),
            ),
        },
    ),
)
